[package]
name = "include-fs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/happenslol/include-fs"

[dependencies]
thiserror = "2.0.12"
walkdir = "2.5.0"

[workspace]
members = ["examples/*"]

[workspace.dependencies]
include-fs = { version = "0.1.0", path = "." }
