[package]
name = "include-fs"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/happenslol/include-fs"
description = "Embed folders in your binary"
readme = "README.md"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
categories = ["development-tools", "web-programming", "game-engines"]
keywords = ["assets", "include", "embed", "dir"]

[dependencies]
thiserror = "2.0.12"
walkdir = "2.5.0"
macros = { path = "./macros" }

[workspace]
resolver = "3"
members = ["examples/*", "macros"]

[workspace.dependencies]
include-fs = { version = "0.2.0", path = "." }
