[package]
name = "include-fs-macros"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/happenslol/include-fs"
description = "Embed folders in your binary"
readme = "../README.md"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
categories = ["development-tools", "web-programming", "game-engines"]
keywords = ["assets", "include", "embed", "dir"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
